--- a/index.html
+++ b/index.html
@@ -12,9 +12,17 @@
 
     <button onclick="aparece()">Link do Server</button>   
 
-    <p id="texto" style="display: none;"
-    <a href="https://discord.gg/H5JSEzU2" target="_blank">https://discord.gg/H5JSEzU2"</a>
-</p>
+    <!-- O parágrafo do Discord está escondido inicialmente -->
+    <p id="texto" style="display: none;">
+        <a href="https://discord.gg/H5JSEzU2" target="_blank">Clique aqui para acessar o Discord</a>
+    </p>
+
+    <hr>
+
+    <!-- Novo botão para a Valestiar Wiki -->
+    <button onclick="window.open('https://valestiar.fandom.com/pt-br/wiki/Valestiar_Wiki', '_blank')">
+        Ir para a Valestiar Wiki
+    </button>
 
     <script>
         function aparece() {
