--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- O parágrafo do Discord está escondido inicialmente -->
     <p id="texto" style="display: none;">
-        <a href="https://discord.gg/H5JSEzU2" target="_blank">Clique aqui para acessar o Discord</a>
+        <a href="https://discord.gg/HKQEmHnSCj" target="_blank">Clique aqui para acessar o Discord</a>
     </p>
 
     <hr>
