--- a/index.html
+++ b/index.html
@@ -3,7 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>teste</title>
+    <title>Valestia</title>
+    <style>
+        /* Definir a cor de fundo da página */
+        body {
+            background-color: #ff4d4d; /* Fundo vermelho claro */
+            font-family: Arial, sans-serif; /* Definir uma fonte mais bonita */
+            color: white; /* Cor do texto */
+            margin: 0;
+            padding: 0;
+        }
+
+        /* Estilo para o título */
+        h1 {
+            text-align: center; /* Centraliza o título */
+            font-size: 36px;
+            margin-top: 50px;
+        }
+
+        /* Estilo para os parágrafos */
+        p {
+            text-align: center;
+            font-size: 18px;
+            margin-top: 20px;
+        }
+
+        /* Estilo para os botões */
+        button {
+            display: block; /* Faz os botões ficarem em blocos separados */
+            margin: 20px auto; /* Espaço automático ao redor dos botões */
+            padding: 10px 20px; /* Tamanho do botão */
+            background-color: #ff6666; /* Cor de fundo do botão */
+            color: white; /* Cor do texto dentro do botão */
+            font-size: 18px; /* Tamanho da fonte */
+            border: none; /* Remove a borda */
+            border-radius: 5px; /* Bordas arredondadas */
+            cursor: pointer; /* Mostra o cursor de mão */
+            transition: background-color 0.3s; /* Transição suave ao passar o mouse */
+        }
+
+        /* Efeito de hover nos botões */
+        button:hover {
+            background-color: #ff3333; /* Cor do botão ao passar o mouse */
+        }
+
+        /* Estilo para o parágrafo que contém o link */
+        #texto {
+            text-align: center;
+            font-size: 20px;
+            margin-top: 20px;
+        }
+
+        a {
+            color: white; /* Cor do link */
+            text-decoration: none; /* Remove o sublinhado */
+            font-weight: bold; /* Torna o texto mais forte */
+        }
+
+        a:hover {
+            text-decoration: underline; /* Adiciona sublinhado quando o link for hover */
+        }
+    </style>
+
 </head>
 <body>
     <h1>Valestia</h1>
@@ -17,7 +78,6 @@
         <a href="https://discord.gg/HKQEmHnSCj" target="_blank">Clique aqui para acessar o Discord</a>
     </p>
 
-    <hr>
 
     <!-- Novo botão para a Valestiar Wiki -->
     <button onclick="window.open('https://valestiar.fandom.com/pt-br/wiki/Valestiar_Wiki', '_blank')">
