--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         }
 
         a {
-            color: white; /* Cor do link */
+            color: rgb(3, 3, 3); /* Cor do link */
             text-decoration: none; /* Remove o sublinhado */
             font-weight: bold; /* Torna o texto mais forte */
         }
