--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         body {
             background-color: #ff4d4d; /* Fundo vermelho claro */
             font-family: Arial, sans-serif; /* Definir uma fonte mais bonita */
-            color: white; /* Cor do texto */
+            color: rgb(3, 3, 3); /* Cor do texto */
             margin: 0;
             padding: 0;
         }
@@ -34,7 +34,7 @@
             margin: 20px auto; /* Espaço automático ao redor dos botões */
             padding: 10px 20px; /* Tamanho do botão */
             background-color: #ff6666; /* Cor de fundo do botão */
-            color: white; /* Cor do texto dentro do botão */
+            color: rgb(2, 2, 2); /* Cor do texto dentro do botão */
             font-size: 18px; /* Tamanho da fonte */
             border: none; /* Remove a borda */
             border-radius: 5px; /* Bordas arredondadas */
@@ -55,7 +55,7 @@
         }
 
         a {
-            color: rgb(3, 3, 3); /* Cor do link */
+            color: white; /* Cor do link */
             text-decoration: none; /* Remove o sublinhado */
             font-weight: bold; /* Torna o texto mais forte */
         }
